# main

./: .gitignore  Cargo.toml  README.md  package-lock.json
docs/: ast-specification.md  common.css  compiler-architecture.md  index.html  language-syntax.md  module-system.md  package-manager.md  template-file.html
docs/docs/: ast-specification.html  compiler-architecture.html  language-syntax.html  module-system.html  package-manager.html
docs/really/: really.html
installer/: install.ps1  install.sh
installer_exe/: Cargo.toml  build.rs
installer_exe/src/: main.rs
